OneDrive/Desktop/New folder/assessment/kubernetes/service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
      #nodePort: 30801 
      protocol: TCP
      name: http
  sessionAffinity: None
